added img and formatting to rentals

--- a/finalProject/rentals.html
+++ b/finalProject/rentals.html
@@ -34,7 +34,7 @@
     <main class="rentals">
         <div class="hero_container">
             <picture class="hero">
-                <img class="hero" src="images/cozumelCoast.webp" alt="Cozumel coast">
+                <img class="hero" src="images/cozumelCoast.webp" alt="Cozumel coast" loading="lazy">
             </picture>
             
             <section class="action">
@@ -55,7 +55,12 @@
             </thead>
             <tbody></tbody>
         </table>
-
+        <div class="photos_container">
+            <div class="photos">
+                <img src="images/atv_beach.webp" alt="atv on the beach" loading="lazy">
+                <img src="images/jeep_beach.webp" alt="jeep on the beach" loading="lazy">
+            </div>
+        </div>
     </main>
     <footer>
         <p>
