--- a/finalProject/reservation.html
+++ b/finalProject/reservation.html
@@ -34,7 +34,7 @@
     <main>
         <div class="hero_container">
             <picture class="hero">
-                <img class="hero" src="images/cozumelCoast.webp" alt="Cozumel coast">
+                <img class="hero" src="images/cozumelCoast.webp" alt="Cozumel coast" loading="lazy">
             </picture>
         </div>
 
