--- a/finalProject/thankyou.html
+++ b/finalProject/thankyou.html
@@ -22,39 +22,16 @@
     <button id="menu"></button>
     <nav class="navigation">
         <a href="index.html">Home</a>
-        <a href="rentals.html" class="active" >Rentals</a>
+        <a href="rentals.html">Rentals</a>
         <a href="reservation.html">Reservations</a>
         <a href="contact.html">Contact Us</a>
     </nav>
-    <main class="rentals">
-        <div class="hero_container">
-            <picture class="hero">
-                <img class="hero" src="images/cozumelCoast.webp" alt="Cozumel coast" loading="lazy">
-            </picture>
-            
-            <section class="action">
-                <h2><a href="reservation.html">Make a Reservation Now!</a></h2>
-            </section>
-        </div>
-
-        <table id="pricingTable">
-            <thead>
-                <tr>
-                    <th>Rental Type</th>
-                    <th>Max Riders</th>
-                    <th>Reservation Half Day (3 hrs)</th>
-                    <th>Reservation Full Day</th>
-                    <th>Walk-In Half Day (3 hrs)</th>
-                    <th>Walk-In Full Day</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-        <div class="photos_container">
-            <div class="photos">
-                <img src="images/atv_beach.webp" alt="atv on the beach" loading="lazy">
-                <img src="images/jeep_beach.webp" alt="jeep on the beach" loading="lazy">
-            </div>
+    <main>
+        <div class="thankyou">
+            <p>Thank you for making your reservation! We are excited to have you!</p>
+            <p>If you have any questions please reach out to us on our Contact Us page.</p>
+        
+        <img src="images/beach.webp" alt="the beach" loading="lazy">
         </div>
     </main>
     <footer>
@@ -70,8 +47,6 @@
     </footer>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/hamburger.js"></script>
-    <script src="scripts/rentals.js"></script>
-
 
 </body>
 </html>
