added contact us page html and css

--- a/finalProject/contact.html
+++ b/finalProject/contact.html
@@ -37,6 +37,48 @@
             </section>
         </div>
 
+        <section class="card">
+            <h3>Playa del Carmen-Cozumel Ferry Dock Location</h3>
+            <p>Av. Rafael E. Melgar, Cozumel, Q.R., Mexico</p>
+            <p>Phone: +52 987 123 4567</p>
+            <p>Email: elcentro@scootsrentals.com</p>
+        </section>
+
+        <section class="card">
+            <h3>Terminal Puerta Maya Location</h3>
+            <p>Terminal Puerta Maya, Cozumel, Q.R., Mexico</p>
+            <p>Phone: +52 987 765 4321</p>
+            <p>Email: puertamaya@scootsrentals.com</p>
+        </section>
+
+        <section class="card">
+            <h3>Playa del Carmen-Cozumel Ferry Dock Location</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4459.187626867548!2d-86.94850843173374!3d20.516808337185367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e573cfb8d1a8d%3A0x46e23bf00b1fc3e9!2sAv.%20Rafael%20E.%20Melgar%2C%20Quintana%20Roo%2C%20Mexico!5e0!3m2!1sen!2sus!4v1721740976471!5m2!1sen!2sus" width="849" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
+        </section>
+
+        <section class="card">
+            <h3>Terminal Puerta Maya Location</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.7232853914197!2d-86.97600862608334!3d20.47655550651822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e57491a71c81d%3A0x6933058e58e0ee3d!2sPuerta%20Maya%20Cruise%20Ship%20Maritime%20Terminal!5e0!3m2!1sen!2sus!4v1721741086859!5m2!1sen!2sus" width="849" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
+        </section>
+
+        <div class="formContainer">
+            <form method="get" action="contactThanks.html" class="form1">
+                <fieldset>
+                    <legend>Personal Information</legend>
+            
+                    <label for="fname">First Name<input type="text" name="fname" id="fname" required></label>
+
+                    <label for="lname">Last Name <input type="text" name="lname" id="lname" required></label>
+
+                    <label for="email">Email Address <input type="email" name="email" id="email" required placeholder="example@email.com"></label>
+
+                    <label for="comments">Questions or Comments</label><textarea id="comments" rows="4" cols="50" placeholder="All questions, concerns, and worries welcome here"></textarea>
+
+                </fieldset>
+                <input type="submit" name="subButton" id="subButton" value="Get An Answer!">
+            </form>
+        </div>
+
     </main>
     <footer>
         <p>
