--- a/finalProject/index.html
+++ b/finalProject/index.html
@@ -71,7 +71,7 @@
                 <ul>
                     <li>Address: Terminal Puerta Maya, Cozumel, Q.R., Mexico</li>
                     <li>Phone: +52 987 765 4321</li>
-                    <li>Email: puertamaya@scootsrentals.co</li>
+                    <li>Email: puertamaya@scootsrentals.com</li>
                 </ul>
                 <h4>Follow Us on Social Media</h4>
                 <ul>
