--- a/finalProject/contact.html
+++ b/finalProject/contact.html
@@ -64,7 +64,7 @@
         <div class="formContainer">
             <form method="get" action="contactThanks.html" class="form1">
                 <fieldset>
-                    <legend>Personal Information</legend>
+                    <legend>Contact Us</legend>
             
                     <label for="fname">First Name<input type="text" name="fname" id="fname" required></label>
 
